#6528 make basic dialect through dialect descriptor & reflection improvements